# image-render-templates

./: NOTICE.md  README.md  package.json
docs/source/: conf.py  index.rst
std-action-python/: setup.cfg  template.json5
std-action-python/docs/source/: Main.md  index.rst
std-action-python/src/catharsys/plugins/_ext_/python/actions/: example.py
std-action-python/src/catharsys/plugins/_ext_/python/actions/lib/: cls_example.py
std-modifier-blender/: README.md  setup.cfg  template.json5
std-modifier-blender/config/: modify.json5
std-modifier-blender/docs/source/: conf.py
std-modifier-blender/src/catharsys/plugins/_ext_/blender/modify/func/: __init__.py  example.py
std-modifier-blender/src/catharsys/plugins/_ext_/util/: version.py
workspace-just-render/: .gitignore  package.json  template.json5
workspace-just-render/config/_cfg-name_/: Launch.ipynb  exec.json5  launch.json5  manifest.json5  render.json5  trial.json5
workspace-std/: template.json5
workspace-std/blend/: Test.blend
workspace-std/config/_cfg-name_/: Launch.ipynb  launch.json5  manifest.json5  trial.json5
workspace-std/config/_cfg-name_/anim/: rot_01.json5
workspace-std/config/_cfg-name_/capture/std/: 30fps.json5
workspace-std/config/_cfg-name_/exec/: blender_auto.json5  py_lsf_v1.json5  py_std_v1.json5
workspace-std/config/_cfg-name_/log/: log_obj_v1.json5
workspace-std/config/_cfg-name_/modify/: delta_rot_01.json5
workspace-std/config/_cfg-name_/render/: image_v1.json5
workspace-std/config/_cfg-name_/render/compositor/: image_v1.json5
(+3 files in other folders)
