[metadata]
name = example-_ext_-modifer-blender
version = attr: catharsys.plugins._ext_.util.version.__version__

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    pyjson5
    tqdm

[options.packages.find]
where=src
exclude = dev

[options.entry_points]
catharsys.blender.modify =
    /catharsys/blender/modify/object/example:1.0 = catharsys.plugins._ext_.blender.modify.func.object:Example
